# descubreboyaca-backend

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  NAMING_CONVENTIONS.md  README.md  TODO.md  alembic.ini  pyproject.toml  ruff.toml
.cursor/rules/: commit.mdc
.github/: GITFLOW.md  ROADMAP.md
alembic/: README.md  __init__.py  env.py
alembic/versions/: 20251021_0918_d6e1a4f9747b_create_restaurants_table.py  20251021_0918_d91d67323aac_create_archive_table.py  20251023_0708_5f5134a918f7_create_users_table.py  20251023_0937_477b681fcc75_create_restaurant_owners_table.py  20251026_1120_1d6caec41e69_create_dishes_table.py  20251026_1500_2f8a3c9b4e5d_create_favorites_table.py  __init__.py
app/: __init__.py  main.py
app/clients/: __init__.py
app/core/: __init__.py  lifespan.py
app/core/routes/: main.py  (+2 more)
app/domains/: __init__.py
app/shared/: __init__.py
docs/code/: API_Repositories.md  API_Repository_Interfaces.md  Cheat_Sheet_ES.md  Connection_Pool_Guide_ES.md  Connection_Pool_Quick_Reference_ES.md  Database_Best_Practices.md  Database_Repositories.md  Dependencies.md  Entities.md  Enums.md  Exceptions.md  Flujo_Visual_ES.md  Import_Patterns.md  Lifespan_Explained_ES.md  Models.md  README_Lifespan.md  Repository_Interfaces.md  Routes.md  Schemas.md  Services.md  Value_Objects.md
examples/: __init__.py  lifespan_comparison.py  test_lifespan.py
tests/: ARCHITECTURE.md  __init__.py  conftest.py
tests/domains/: __init__.py
tests/fixtures/: README.md  __init__.py  auth_users.py  clients.py  database.py
tests/shared/: __init__.py
(+889 files in other folders)
